[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secuority"
version = "0.5.0"
description = "Automate and standardize Python project security and quality configurations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [ "security", "quality", "python", "automation", "configuration", "linting", "pre-commit", "ci-cd",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Topic :: Software Development :: Quality Assurance", "Topic :: Security", "Topic :: Software Development :: Libraries :: Python Modules", "Environment :: Console", "Typing :: Typed",]
dependencies = [
    "typer>=0.9.4",
    "rich>=13.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.28.2",
]
[[project.authors]]
name = "Secuority Team"
email = "team@secuority.dev"

[[project.maintainers]]
name = "Secuority Team"
email = "team@secuority.dev"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.10",
    "basedpyright>=1.0.0",
    "pre-commit>=3.0.4",
    "safety>=3.7.0",
    "types-PyYAML>=6.0.12.20250915",
    "tomli-w>=1.2.0",
]
test = [ "pytest>=7.0.1", "pytest-cov>=7.0.0", "pytest-mock>=3.15.1", "pytest-xdist>=3.8.0",]
docs = [ "sphinx>=5.0.2", "sphinx-rtd-theme>=3.0.2", "myst-parser>=4.0.1",]
security = [ "bandit>=1.7.10", "safety>=2.3.5", "semgrep>=1.145.0",]

[project.urls]
Homepage = "https://github.com/secuority/secuority-cli"
Documentation = "https://secuority.readthedocs.io"
Repository = "https://github.com/secuority/secuority-cli"
"Bug Tracker" = "https://github.com/secuority/secuority-cli/issues"
Changelog = "https://github.com/secuority/secuority-cli/blob/main/CHANGELOG.md"

[project.scripts]
secuority = "secuority.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["secuority"]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
show-fixes = true
output-format = "concise"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportUntypedFunctionDecorator = false  # Allow untyped decorators
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
ignore = []

[tool.bandit]
exclude_dirs = [
  "tests",
  ".mypy_cache",
  ".ruff_cache",
  "htmlcov",
  ".github",
  "docs",
  "secuority.egg-info",
  ".venv",
  "venv",
  "build",
  "dist",
]
skips = [ "B101", "B310",]

[project.entry-points."secuority.plugins"]

[tool.hatch.build.targets.wheel.force-include]
"secuority/templates" = "secuority/templates"
"secuority/py.typed" = "secuority/py.typed"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "ARG001"]

[tool.bandit.assert_used]
skips = [ "*_test.py", "test_*.py",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = "-n logical --cov=secuority --cov-report=term-missing --cov-report=html"

[tool.secuority.safety]
# Safety requires string CVE IDs; start with placeholder list.
ignore = []
full_report = true
output = "json"
continue_on_error = false

[tool.uv]
# UV-specific configuration
constraint-dependencies = []
override-dependencies = []

[tool.uv.sources]
# Add any custom sources here if needed
